--- a/13.Working_with_Mongoose/project/views/shop/orders.ejs
+++ b/13.Working_with_Mongoose/project/views/shop/orders.ejs
@@ -12,8 +12,8 @@
                         <li>
                             <h1># <%= order._id %></h1>
                             <ul>
-                                <% order.items.forEach(item => { %>
-                                    <li><%= item.title %> (<%= item.quantity %>)</li>
+                                <% order.products.forEach(item => { %>
+                                    <li><%= item.product.title %> (<%= item.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
