--- a/15.Adding_Authentication/project/public/css/main.css
+++ b/15.Adding_Authentication/project/public/css/main.css
@@ -225,6 +225,22 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  padding: 0.5rem;
+  width: 90%;
+  border: 1px solid #4771FA;
+  border-radius: 3px;
+  background-color: #B9C9FF;
+  text-align: center;
+}
+
+.user-message--error {
+  border-color: red;
+  background: rgb(255, 176, 176);
+  color: red;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -232,5 +248,9 @@ form {
 
   #side-menu-toggle {
     display: none;
+  }
+
+  .user-message {
+    width: 30rem;
   }
 }
